# yanico

./: .gitignore  .travis.yml  CHANGES.ja.md  LICENSE  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: ci.yml
tests/: __init__.py  test_command.py  test_config.py  test_session.py  test_session_firefox.py  test_session_token.py
yanico/: __init__.py  __main__.py  config.py
yanico/command/: __init__.py
yanico/session/: __init__.py  firefox.py  token.py
