#  Copyright 2015-2024 Masayuki Yamamoto
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "yanico"
dynamic = ["version"]
description = "Yet Another Niconico-douga Command-line Interface"
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["cli", "comment", "niconico", "video"]
authors = [
  {name = "Masayuki Yamamoto", email = "15698961+ma8ma@users.noreply.github.com"},
]
maintainers = [
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Session",
]
dependencies = [
  'importlib-metadata>=4.6.0; python_version<"3.10"',
]

[project.optional-dependencies]
develop = ["hacking", "flake8-docstrings", "pep8-naming"]
dev = [
  "black>=23.7.0",
  "coverage",
  "docutils>=0.21",
  "mypy>=0.560",
  "pylint>=2.6.0",
  "pytest",
  "setuptools>=61.0",
  "types-setuptools",
]

[project.urls]
Homepage = "https://github.com/ma8ma/yanico"
Repository = "https://github.com/ma8ma/yanico"
Changelog = "https://github.com/ma8ma/yanico/blob/master/CHANGES.ja.md"

[project.scripts]
yan = "yanico.command.__init__:main"

[project.entry-points."yanico.sessions"]
__token__ = "yanico.session.token:load"
firefox = "yanico.session.firefox:load"

[tool.setuptools.packages.find]
exclude = ["tests"]

[tool.setuptools_scm]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312", "py313"]

[tool.mypy]
python_version = "3.9"

[tool.pylint.format]
max-line-length = "88"
